# go-commerce-qa-assistant

./: .env.example  .gitignore  README.md  docker-compose.app.yml  docker-compose.chroma.yml  pyproject.toml
.github/workflows/: deploy-ec2.yml
apps/api/: Dockerfile
apps/api/app/: main.py  schemas.py  service.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
apps/web/src/: App.jsx  styles.css
docs/: interview-qa.md  troubleshooting-playbook.md
eval/: questions.yaml
prompts/: system.md
scripts/: ask.py  index_once.py
src/pqa/: __init__.py  answerer.py  config.py  indexer.py  intent_router.py  models.py  query_rewriter.py  rate_limit.py  retriever.py  vector_store.py
src/project_qa_assistant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_api_limits.py  test_indexer_symbols.py  test_query_rewriter.py  test_retriever.py  test_vector_store.py
